fixed z-index issue on 404

--- a/css/screen.css
+++ b/css/screen.css
@@ -243,6 +243,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     line-height: 1em;
     font-weight: bold;
     letter-spacing: -0.5px;
+    z-index: 100;
 }
 
 .site-nav-logo:hover {
